CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(EVENT)

# silence policy CMP0042 warning by enabling RPATH explicitly
IF(APPLE AND NOT DEFINED CMAKE_MACOSX_RPATH)
	SET(CMAKE_MACOSX_RPATH TRUE)
ENDIF()

SET(CMAKE_MODULE_PATH ${EVENT_SOURCE_DIR}/cmake)
SET(BUILD_SHARED_LIBS ON)

ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(lua_module)
ADD_SUBDIRECTORY(sample)
