AUX_SOURCE_DIRECTORY(src CORE_SOURCES)
INCLUDE_DIRECTORIES(
	${EVENT_SOURCE_DIR}/core
	${Libevent2_INCLUDE_DIR}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DRANGER_INTERNAL")

ADD_LIBRARY(ranger_event ${CORE_SOURCES})
TARGET_LINK_LIBRARIES(ranger_event ${Libevent2_LIBRARIES})

FILE(GLOB CORE_HEADERS ranger/event/*.hpp)
INSTALL(FILES ${CORE_HEADERS} DESTINATION include/ranger/event)
INSTALL(TARGETS ranger_event DESTINATION lib)
