FILE(GLOB EVENT_HEADER *.hpp)
AUX_SOURCE_DIRECTORY(. EVENT_SOURCE)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DRANGER_INTERNAL")

ADD_LIBRARY(ranger_event ${EVENT_HEADER} ${EVENT_SOURCE})
TARGET_LINK_LIBRARIES(ranger_event event_core event_pthreads)

INSTALL(TARGETS ranger_event DESTINATION lib)
INSTALL(FILES ${EVENT_HEADER} DESTINATION include/event)
