FIND_PACKAGE(Libevent2 REQUIRED)
INCLUDE_DIRECTORIES(${Libevent2_INCLUDE_DIR})

FILE(GLOB EVENT_HEADER *.hpp)
AUX_SOURCE_DIRECTORY(. EVENT_SOURCE)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DRANGER_INTERNAL")

ADD_LIBRARY(ranger_event ${EVENT_HEADER} ${EVENT_SOURCE})
TARGET_LINK_LIBRARIES(ranger_event ${Libevent2_LIBRARIES})

INSTALL(TARGETS ranger_event DESTINATION lib)
INSTALL(FILES ${EVENT_HEADER} DESTINATION include/event)
