FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

INCLUDE_DIRECTORIES(${EVENT_SOURCE_DIR})

SET_SOURCE_FILES_PROPERTIES(lua_ranger_event.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(lua_ranger_event.i PROPERTIES SWIG_FLAGS "-Wall")

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -DRANGER_SWIG_INTERNAL")

SWIG_ADD_MODULE(lua_ranger_event lua lua_ranger_event.i)
SWIG_LINK_LIBRARIES(lua_ranger_event ranger_event lua)
ADD_DEPENDENCIES(lua_ranger_event ranger_event)
