AUX_SOURCE_DIRECTORY(. SAMPLE_SOURCES)
INCLUDE_DIRECTORIES(${EVENT_SOURCE_DIR}/core)

FOREACH(SRC ${SAMPLE_SOURCES})
	STRING(REGEX REPLACE ".*/(.*)\\.cpp$" "\\1" TGT ${SRC})
	ADD_EXECUTABLE(${TGT} ${SRC})
	TARGET_LINK_LIBRARIES(${TGT} ranger_event)
	ADD_DEPENDENCIES(${TGT} ranger_event)
ENDFOREACH()
